--- a/index.html
+++ b/index.html
@@ -3,7 +3,40 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Para ti... ✨</title>
+		<title>Para ti... ✨ | Un Regalo Navideño Especial</title>
+
+		<!-- Open Graph Meta Tags -->
+		<meta
+			property="og:title"
+			content="❄️ Para ti... - Regalos que no caben en una caja"
+		/>
+		<meta
+			property="og:description"
+			content="Una esfera de nieve mágica de Navidad.🎄✨"
+		/>
+		<meta
+			property="og:image"
+			content="https://udlzzxvyifesjrergedu.supabase.co/storage/v1/object/public/images/nieve.png"
+		/>
+		<meta property="og:image:width" content="1200" />
+		<meta property="og:image:height" content="630" />
+		<meta property="og:type" content="website" />
+
+		<!-- Twitter Card Meta Tags -->
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta
+			name="twitter:title"
+			content="❄️ Para ti... - Regalos que no caben en una caja"
+		/>
+		<meta
+			name="twitter:description"
+			content="Una esfera de nieve mágica de Navidad.🎄✨"
+		/>
+		<meta
+			name="twitter:image"
+			content="https://udlzzxvyifesjrergedu.supabase.co/storage/v1/object/public/images/nieve.png"
+		/>
+
 		<!-- Fuente Pixel Art y Fuente Legible -->
 		<link
 			href="https://fonts.googleapis.com/css2?family=VT323&family=Poppins:wght@300;400;600&display=swap"
